# rust-zero-to-product

./: .gitignore  Cargo.toml  Dockerfile  README.md
chapter03/: Cargo.toml
chapter03/src/routes/: subscriptions.rs
chapter04/: Cargo.toml
chapter04/src/: configuration.rs  main.rs  startup.rs
chapter04/tests/: health_check.rs
chapter05/: Cargo.toml
chapter05/configuration/: base.yaml  local.yaml
chapter05/migrations/: 20230409130353_create_subscrptions_table.sql
chapter05/src/: main.rs
chapter05/tests/: health_check.rs
chapter06/: Cargo.toml
chapter06/configuration/: local.yaml
chapter06/src/: configuration.rs  main.rs
chapter06/tests/: health_check.rs
chapter07/: Cargo.toml
chapter07/configuration/: base.yaml  production.yaml
chapter07/scripts/: init_db.sh
chapter07/src/: configuration.rs
chapter07/tests/api/: helpers.rs  (+2 more)
chapter08/: Cargo.toml
chapter08/src/: email_client.rs  startup.rs
chapter09/configuration/: local.yaml
chapter09/migrations/: 20230716072009_create_subscription_tokens_table.sql
chapter09/src/: startup.rs
chapter10/: Cargo.toml
chapter10/configuration/: base.yaml
chapter10/scripts/: init_redis.sh
chapter10/src/: authentication.rs  configuration.rs  email_client.rs  startup.rs  telemetry.rs  utils.rs
chapter11/: Cargo.toml
chapter11/migrations/: 20231109094341_create_issue_delivery_queue_table.sql
chapter11/src/: utils.rs
configuration/: base.yaml  production.yaml
migrations/: 20230716071700_make_status_not_null_in_subscriptions.sql  20231106014611_seed_user.sql
src/: configuration.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs
src/authentication/: password.rs
src/domain/: subscriber_email.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  newsletter.rs  subscriptions.rs
(+35 files in other folders)
